<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:id="@+id/registerFragment"
    android:orientation="vertical"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:text="Register \n Donnor"
        android:fontFamily="sans-serif-medium"
        android:textSize="20sp"
        android:drawableLeft="@drawable/register_user"
        android:drawablePadding="10dp"
        android:textAllCaps="false"
        android:gravity="center"


        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/donnorName"
        android:layout_marginStart="20sp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="20sp"
            android:inputType="textPersonName"
            android:textColor="#0E0E0E"
            android:textStyle="bold"



            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginStart="20sp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextemail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="20sp"
            android:inputType="textEmailAddress"
            android:textColor="#0E0E0E"
            android:textStyle="bold"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:layout_marginStart="20sp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/editTextpass"
            android:layout_height="match_parent"
            android:layout_marginRight="20sp"
            android:inputType="textPassword"
            android:textColor="#0E0E0E"
            android:textStyle="bold"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/number"
        android:layout_marginStart="20sp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="20sp"
            android:id="@+id/editTextnumber"
            android:inputType="number"
            android:textColor="#0E0E0E"
            android:textStyle="bold"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Blood Group"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            />
        <Spinner
            android:id="@+id/spinnerOption"
            android:layout_height="wrap_content"
            android:layout_marginStart="120sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:layout_width="180sp" />
    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        android:layout_marginStart="20sp"


        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextcity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="20sp"
            android:inputType="textPersonName"
            android:textColor="#0E0E0E"
            android:textStyle="bold"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/country"
        android:layout_marginStart="20sp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextcountry"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="20sp"
            android:inputType="textPersonName"
            android:textColor="#0E0E0E"
            android:textStyle="bold"
            />
    </com.google.android.material.textfield.TextInputLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">
        <include layout="@layout/register_and_signup_layout"/>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/display_data"
        android:visibility="invisible">
    </TextView>
</LinearLayout>

</ScrollView>